--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ header .container {
 }
 
 header h1 {
-    font-family: 'Bangers', cursive; 
+    font-family: 'Noto Sans', sans-serif; 
     font-size: 2rem;
 }
 
